--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@sparkpost/fixture-interface",
   "version": "1.0.0",
+  "private": false,
   "description": "A simple interface to make helpers for setting up and tearing down data needed for tests.",
   "main": "fixture.js",
   "directories": {
@@ -11,11 +12,15 @@
     "lodash": "4.17.5"
   },
   "devDependencies": {
+    "eslint": "4.19.1",
+    "eslint-config-sparkpost": "1.4.1",
     "jest": "22.1.4",
     "sinon": "4.2.2"
   },
   "scripts": {
-    "test": "jest test/*.spec.js --watch --coverage --coverageDirectory='test/reports'",
+    "lint": "eslint --fix fixture.js test/unit/**/*.js",
+    "test-ci": "jest test/unit/*.spec.js --ci --coverage --coverageDirectory='test/reports'",
+    "test": "jest test/unit/*.spec.js --watch --coverage --coverageDirectory='test/reports'",
     "example": "jest example/test --watch --coverage --coverageDirectory='example/test/reports'"
   },
   "keywords": [
