--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "bluebird": "3.5.1",
-    "lodash": "4.17.5"
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "eslint": "4.19.1",
     "eslint-config-sparkpost": "1.4.1",
-    "jest": "22.1.4",
+    "jest": "^24.1.0",
     "sinon": "4.2.2"
   },
   "scripts": {
