--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "doxdox": "^3.0.0",
     "eslint": "4.19.1",
     "eslint-config-sparkpost": "1.4.1",
+    "husky": "^2.4.0",
     "jest": "^24.1.0",
     "sinon": "4.2.2"
   },
