--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "chk-changelog": "grep `node -e 'console.log(require(\"./package.json\").version);'` CHANGELOG.md || (echo 'Please update CHANGELOG.md with your updates'; exit 255)",
     "docs": "doxdox fixture.js --layout markdown --output DOCUMENTATION.md",
     "nice-docs": "doxdox 'fixture.js' --layout bootstrap --output docs/index.html && open docs/index.html",
-    "prepublishOnly": "npm run chk-changelog",
-    "prepush": "npm run docs -- && git add DOCUMENTATION.md && if git commit --no-verify -m \"`git rev-parse --abbrev-ref HEAD` Updated Documentation\"; then exit 0; else echo 'No documentation updates'; fi "
+    "prepublishOnly": "npm run chk-changelog"
   },
   "keywords": [
     "test",
@@ -39,5 +38,10 @@
     "url": "git+https://github.com/SparkPost/fixture-interface.git"
   },
   "author": "@Sparkpost",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run docs -- && git add DOCUMENTATION.md && if git commit --no-verify -m \"`git rev-parse --abbrev-ref HEAD` Updated Documentation\"; then exit 0; else echo 'No documentation updates'; fi "
+    }
+  }
 }
