--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "doxdox": "^3.0.0",
     "eslint": "4.19.1",
-    "eslint-config-sparkpost": "1.4.1",
+    "eslint-config-sparkpost": "^2.0.0",
     "husky": "^2.4.0",
     "jest": "^24.1.0",
     "sinon": "4.2.2"
